--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,54 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
 
     <record id="real_estate_properties_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="context">{'search_default_statefilter':'new'}</field> 
+        <!-- this is used to create default filter from the filter 'statefilter' which is found in search view-->
     </record>
 
-     <record id="books_action" model="ir.actions.act_window">
-        <field name="name">Books</field>
-        <field name="res_model">book</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-    
-     <record id="real_estate_properties_type_action" model="ir.actions.act_window">
-        <field name="name">Property Type</field>
+    <record id="real_estate_type_action" model="ir.actions.act_window">
+        <field name="name">Types</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">tree,form</field>
     </record>
-    
-    <record id="real_estate_properties_offer_action" model="ir.actions.act_window">
-        <field name="name">Offers</field>
-        <field name="res_model">estate.property.offer</field>
+
+    <record id="real_estate_books_action" model="ir.actions.act_window">
+        <field name="name">Books</field>
+        <field name="res_model">estate.books</field>
         <field name="view_mode">tree,form</field>
     </record>
-    
-   
+
+    <record id="real_estate_offers_action" model="ir.actions.act_window">
+        <field name="name">Offers</field>
+        <field name="res_model">estate.property.offers</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="real_estate_property_tag_action" model="ir.actions.act_window">
+        <field name="name">Property Tags</field>
+        <field name="res_model">estate.property.tag</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
     <menuitem id="menu_real_estate_root" name="Real Estate">
-        <menuitem id="menu_real_estate_advertisments" name="Advertisements">
+        <menuitem id="menu_real_estate_advertisements" name="Advertisements">
             <menuitem id="menu_real_estate_action" action="real_estate_properties_action"/>
-            <menuitem id="menu_real_estate_offer_action" action="real_estate_properties_offer_action"/>
+            <menuitem id="menu_real_estate_offers_action" action="real_estate_offers_action"/>
         </menuitem>
-        
     </menuitem>
 
-    <menuitem id="menu_real_estate_book" name="Books" parent="menu_real_estate_root"/>
-    <menuitem id="menu_real_estate_book_action" parent="menu_real_estate_book" action="books_action"/>
-    
-    <menuitem id="menu_real_estate_property_type" name="Setting" parent="menu_real_estate_root"/>
-    <menuitem id="menu_real_estate_property_type_action" parent="menu_real_estate_property_type"     	   action="real_estate_properties_type_action"/>
-    
-    
-    
-    
-   
-    
+    <menuitem id="menu_real_estate_setting" name="Settings" parent="menu_real_estate_root">
+        <menuitem id="menu_real_estate_type_action" action="real_estate_type_action"/>
+        <menuitem id="menu_real_estate_property_tag_action" action="real_estate_property_tag_action"/>
+    </menuitem>
+
+    <record id="real_estate_books_category_action" model="ir.actions.act_window">
+        <field name="name">Category</field>
+        <field name="res_model">estate.books.category</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="real_estate_books_rack_location_action" model="ir.actions.act_window">
+        <field name="name">Rack Location</field>
+        <field name="res_model">estate.books.rack.location</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem id="menu_real_estate_books" name="Books" parent="menu_real_estate_root">
+        <menuitem id="menu_real_estate_books_action" action="real_estate_books_action"/>
+        <menuitem id="menu_real_estate_books_category_action" action="real_estate_books_category_action"/>
+        <menuitem id="menu_real_estate_books_rack_location_action" action="real_estate_books_rack_location_action"/>
+    </menuitem>
+
 </odoo>
-
-
-
-
-
