--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -23,7 +23,7 @@
         <field name='arch' type='xml'>
             <form>
                 <header>
-                    <button name="sold_action" type="object" string="SOLD" attrs="{'invisible':['|',('state','=','sold'),('state','=','cancel')]}"/>
+                    <button name='%(wizard_create_sold_invoice_action)d' type="action" context ="{'default_partner_id':buyer_id}" string="SOLD" attrs="{'invisible':['|',('state','=','sold'),('state','=','cancel')]}"/>
                     <button name="cancel_action" type="object" string="CANCEL" attrs="{'invisible':['|',('state','=','sold'),('state','=','cancel')]}"/>
                     <field name='state' widget='statusbar'/>
                 </header>
@@ -76,10 +76,11 @@
                                 <field name='offers_ids'>
                                     <tree editable="True"> <!-- this gives option to edit in tree view itself -->
                                         <field name='name'/>
-                                        <field name='offer_person'/>                                
+                                        <field name='offer_person' options="{'no_create':True,'no_open':True}"/>                                
                                         <field name='price'/>
-                                        <field name='offer_status'/>
-                                        <button name='offer_status_accept_action' type='object' icon='fa-check' attrs="{'invisible':['|',('offer_status','=','accept'),('offer_status','=','reject')]}"/>
+                                        <field name='offer_status' readonly='1'/>
+                                        <button name='offer_status_accept_action' type="object" icon='fa-check' attrs="{'invisible':['|',('offer_status','=','accept'),('offer_status','=','reject')]}"/>
+                                        <!-- <button name='%(wizard_reconfirm_accept_action)d' type="action" icon='fa-check' attrs="{'invisible':['|',('offer_status','=','accept'),('offer_status','=','reject')]}"/> -->
                                         <button name='offer_status_reject_action' type='object' icon='fa-close' attrs="{'invisible':['|',('offer_status','=','accept'),('offer_status','=','reject')]}"/>
                                     </tree>
                                 </field>    
